Base versioning logic

--- a/example/app/build.gradle
+++ b/example/app/build.gradle
@@ -1,3 +1,5 @@
+import ru.solodovnikov.roboversioning.ReleaseDigitVersioning
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.zellius.robo-versioning'
 
@@ -7,14 +9,41 @@ android {
         applicationId "ru.solodovnikov.roboversioning.example"
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        roboFlavor {
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug{
+
+        }
+    }
+
+    flavorDimensions 'dim1'
+    roboGlobal {
+    }
+
+    productFlavors {
+        flavor2 {
+            dimension "dim1"
+           
+        }
+        flavor1 {
+            dimension "dim1"
+            roboFlavor{
+                versioning new ReleaseDigitVersioning()
+            }
+
+        }
+        flavor3 {
+            dimension "dim1"
+        }
+        flavor4 {
+            dimension "dim1"
         }
     }
 }
@@ -23,7 +52,4 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
