--- a/example/app/build.gradle
+++ b/example/app/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.zellius.robo-versioning'
 
-roboVersioning{
+roboVersioning {
+    git {
+        //configure git
+    }
     //quiet()
 }
 
@@ -12,43 +15,58 @@ android {
         minSdkVersion 14
         targetSdkVersion 26
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        roboVersioningFlavor {
+            versioningCalculator TAG_DESCRIBE_DIGIT_RC
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            roboVersioningFlavor {
+                versioningCalculator TAG_DIGIT
+            }
         }
         debug {
-
+            roboVersioningFlavor {
+                versioningCalculator TAG_DIGIT_RC
+            }
+        }
+        buildTypeWithoutVersioning {
         }
     }
 
-    flavorDimensions 'dim1'
+    flavorDimensions 'dimension'
 
     productFlavors {
-        flavor2 {
-            dimension "dim1"
-
-        }
-        flavor1 {
-            versionNameSuffix ".asd"
-            dimension "dim1"
+        customVersioning {
+            dimension "dimension"
             roboVersioningFlavor {
-                versioningCalculator customTagDigit {
-                    pattern = "(\\d+).(\\d+).(\\d+)"
-                    valid = {false}
-                    versionCode = {214}
-                    versionName = "asjfasjhfasjh"
-                    emptyVersion = {["name":"empty", "code":123]}
+                versioningCalculator { git ->
+                    //you can extract data from git here
+                    git.tags()
+                    git.execute("describe --tags")
+                    ['name': 'custom', 'code': 123]
                 }
             }
-
         }
-        flavor3 {
-            dimension "dim1"
+        customDigitTag {
+            versionNameSuffix ".asd"
+            dimension "dimension"
+            roboVersioningFlavor {
+                versioningCalculator customDigitTag {
+                    //you can customize standard digit versioning calculator
+                    pattern = "(\\d+).(\\d+).(\\d+)"
+                    valid = false
+                    versionCode = 214
+                    versionName = "custom_version_name"
+                    emptyVersion = ["name": "empty", "code": 123]
+                }
+            }
         }
-        flavor4 {
-            dimension "dim1"
+        flavorWithoutVersioning {
+            dimension "dimension"
         }
     }
 }
